--- a/BusTrackingApplicationFYP/app/src/main/res/layout/activity_login_screen.xml
+++ b/BusTrackingApplicationFYP/app/src/main/res/layout/activity_login_screen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/busback"
     tools:context="com.example.fahad.bustrackingapplicationfyp.LoginScreen">
 
     <Button
